Themes: Expose Power Dialogs
This will give themes the ability to invert the three power dialogs
without editing a main resource.

Signed-off-by: Bryan Owens <djbryan3540@gmail.com>

Change-Id: Ibeab94add8ce8c18955576dc49c441883feb18d6

--- a/core/res/res/values/aicp_symbols.xml
+++ b/core/res/res/values/aicp_symbols.xml
@@ -153,4 +153,6 @@
   <java-symbol type="string" name="floating_window_snap_right"/>
   <java-symbol type="string" name="floating_window_minimize"/>
 
+  <!--Exposed Java styles for power menu -->
+  <java-symbol type="style" name="Theme.Power.Dialog" />
 </resources>
