--- a/packages/SystemUI/res/values/cm_styles.xml
+++ b/packages/SystemUI/res/values/cm_styles.xml
@@ -49,4 +49,14 @@
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
+    <!-- Base battery metter drawable style -->
+    <style name="BatteryMeterViewDrawable">
+        <!-- gravity used for positioning text within the battery meter -->
+        <item name="android:gravity">center</item>
+    </style>
+    <!-- Battery meter drawable styles -->
+    <style name="BatteryMeterViewDrawable.Portrait"/>
+    <style name="BatteryMeterViewDrawable.Landscape"/>
+    <style name="BatteryMeterViewDrawable.Circle"/>
+
 </resources>
