--- a/packages/SystemUI/res/values/aicp_strings.xml
+++ b/packages/SystemUI/res/values/aicp_strings.xml
@@ -111,8 +111,8 @@
     <string name="quick_settings_navigation_bar">Navigation bar</string>
     <string name="quick_settings_smartbar">SmartBar</string>
     <string name="quick_settings_smartbar_off">SmartBar off</string>
-    <string name="quick_settings_fling">Fling gesture</string>
-    <string name="quick_settings_fling_off">Fling gesture off</string>
+    <string name="quick_settings_fling">Fling</string>
+    <string name="quick_settings_fling_off">Fling off</string>
 
     <!-- App Circle Bar tile -->
     <string name="quick_settings_appcirclebar_title">AppCircleBar</string>
