[RE-PICK][SQUASH] base: SystemUI: Introduce DataSwitchTile
* Based on OnePlus' OxygenOS tile, reworked to work with AOSP toggling without requirements on proprietary telephony-ext features

This is a squash of the following changes:

DataSwitchTile: Improve the code

* Get rid of deprecated AsyncTask
* Removed unused imports
* Finalize global vars
* Some other formatting and minor stuff

Change-Id: Id3e39c98dac6200301d15bf752f866f47875633d

SystemUI: DataSwitchTile: improve the code once again

* made the BroadcastReceiver private and final
* made the PhoneStateListener an anonymous inner class
* guard debug logs
* preloaded some strings and variables that are likely to be used over and over
* use the stream apis to handle subscription info list

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

* @/jhonboy121: adapt to A12 and SysUIToast -> Toast

Co-authored-by: idoybh <idoybh2@gmail.com>

Change-Id: I430a06ab59740739c3074bc892f2eddc5998b23c

Revert "SystemUI: Introduce Data Switch QS Tile"

This reverts commit 29281f94e96611d110312877397753d0a1ebd164.

Change-Id: I5b2d0f834925b4fc2bf1242c29b0fb417a4dd1f3

--- a/packages/SystemUI/res/values/aicp_strings.xml
+++ b/packages/SystemUI/res/values/aicp_strings.xml
@@ -169,8 +169,10 @@
 
     <!-- DataSwitch Tile -->
     <string name="qs_data_switch_label">Switch data card</string>
-    <string name="qs_data_switch_changed_1">Using SIM 1 for Mobile data</string>
-    <string name="qs_data_switch_changed_2">Using SIM 2 for Mobile data</string>
+    <string name="qs_data_switch_toast_0">Currently no SIM card is inserted</string>
+    <string name="qs_data_switch_toast_1">Currently only one SIM card is inserted</string>
+    <string name="qs_data_switch_changed_1">Switch data card to SIM 1.</string>
+    <string name="qs_data_switch_changed_2">Switch data card to SIM 2.</string>
 
     <!-- Omnijaws Weather -->
     <string name="omnijaws_service_error">Error</string>
