SystemUI: Add GamingMode tile
* This tile allows to activate gaming mode on any app/game
* Long press to open Game Space

Change-Id: I3b9e912c95ab092870688813ee83912a223304f5

--- a/packages/SystemUI/res/values/aicp_strings.xml
+++ b/packages/SystemUI/res/values/aicp_strings.xml
@@ -244,4 +244,8 @@
 
     <!-- Daily data usage -->
     <string name="daily_data_usage_title">Today\'s usage</string>
+
+    <!-- Gaming mode -->
+    <string name="gaming_mode_not_enabled">Gaming mode is disabled in settings</string>
+    <string name="quick_settings_gaming_mode_label">Gaming mode</string>
 </resources>
