SysUI: System Info: make resources overlayable
Some legacy devices do not have the necessary
kernel sysfs to display particular sys info. And
when they do, they may have different multipliers
than the default value. Give maintainers the option
to overlay all paths and multipliers

Change-Id: Idafd64567a998a4619446ab890c94e27f124a92a

--- a/core/res/res/values/aicp_config.xml
+++ b/core/res/res/values/aicp_config.xml
@@ -244,4 +244,12 @@
 
     <!-- Keyboard Buttons Brightness control -->
     <dimen name="config_keyboardBrightnessSettingDefaultFloat">1.0</dimen>
+
+    <!-- System info -->
+    <string name="config_sysCPUTemp"></string>
+    <string name="config_sysBatteryTemp"></string>
+    <string name="config_sysGPUFreq"></string>
+    <string name="config_sysGPULoad"></string>
+    <integer name="config_sysCPUTempMultiplier">1</integer>
+    <integer name="config_sysBatteryTempMultiplier">1</integer>
 </resources>
