--- a/core/res/res/values/aicp_symbols.xml
+++ b/core/res/res/values/aicp_symbols.xml
@@ -181,4 +181,12 @@
 
     <!-- Keyboard Buttons Brightness control -->
     <java-symbol type="dimen" name="config_keyboardBrightnessSettingDefaultFloat" />
+
+    <!-- System info -->
+    <java-symbol type="string" name="config_sysCPUTemp" />
+    <java-symbol type="string" name="config_sysBatteryTemp" />
+    <java-symbol type="string" name="config_sysGPUFreq" />
+    <java-symbol type="string" name="config_sysGPULoad" />
+    <java-symbol type="integer" name="config_sysCPUTempMultiplier" />
+    <java-symbol type="integer" name="config_sysBatteryTempMultiplier" />
 </resources>
