base: bring back old style mobile data indicators [1/2]
TODO maybe add settings observer to do update faster then
waiting for the next update

Change-Id: Idf6ba3cd97b6fde1f6a5fbb7ee72b3fba71f710b

--- a/packages/SystemUI/res/values/aicp_dimens.xml
+++ b/packages/SystemUI/res/values/aicp_dimens.xml
@@ -82,4 +82,9 @@
 
     <!-- OmniWeather image size -->
     <dimen name="current_weather_image_size">30dp</dimen>
+
+    <!-- Old mobile signal -->
+    <dimen name="status_bar_mobile_signal_with_type_width">22dp</dimen>
+    <dimen name="status_bar_mobile_signal_width">16dp</dimen>
+    <dimen name="status_bar_mobile_type_height">10dp</dimen>
 </resources>
