[SQUASHED] SystemUI: QS Header data usage info [1/2]
Brought to 12 by @eyosen: adapted layout margins

Includes:

Author: Ali B <abittin@gmail.com>
Date:   Tue Jun 23 20:46:35 2020 +0300

    SystemUI: DataUsage: use proper connection icons

    Change-Id: I54e4eb3be07c64d7758f7010578f3d96b66b55c2

Author: AnkitGourav <Ankitgourav035@gmail.com>
Date:   Thu Jun 18 23:38:13 2020 +0300

    SystemUI: QSHeaderDataUsage: hide usage if device is disconnected

    - also clean-up DataUsageView

    Change-Id: I0b76d46c1ab2ec4b5c9d851ee74aa649bf60491d

Author: AnkitGourav <Ankitgourav035@gmail.com>
Date:   Thu Jun 18 16:09:04 2020 +0300

    SystemUI: QS Header data usage info: don't show used

    - also remove space between unit and value

    Change-Id: I2878b5831539f3ddc568add7a04d9dcb8e9f613b

Author: AnkitGourav <Ankitgourav035@gmail.com>
Date:   Thu May 28 06:24:17 2020 +0530

    SystemUI: QSHeaderDataUsage: show Wi-Fi usage when connected to Wi-Fi

    Change-Id: I7e3b04c4d20e2bcfeb659457a4f6639250fa55f3

Author: AnkitGourav <Ankitgourav035@gmail.com>
Date:   Thu May 28 06:21:10 2020 +0530

    AicpUtils: add method to check if device is connected to Wi-Fi

    Extracted from 085cb7424f5b8b451f2c92ef2d2fc81b5f103e0d

    Change-Id: I1d0fd663b123c0da66e976ac485f9411d5429756

Author: Alex Cruz <du.alexcruz@gmail.com>
Date:   Fri Dec 20 10:51:39 2019 -0500

    AicpUtils: Add method to check for both wifi and mobile connections

    Change-Id: If8f50e519778c03cb249a2ea8c7a7893c5b9f52f

Author: Ali B <abittin@gmail.com>
Date:   Thu Jun 11 14:59:35 2020 +0300

    DataUsageView: move it to QQS Status Icons area

    And properly size it to fit with the rest of
    the content there.
    Add some padding as well while making it
    overlayable in device trees

    Change-Id: Ic58df39f628e6baf9f407d0b94f4416d6185c38f

Author: AnkitGourav <Ankitgourav035@gmail.com>
Date:   Tue May 26 19:47:35 2020 +0530

    QSHeaderDataUsage: add icon and improve view

    - also improve 

--- a/packages/SystemUI/res/values/aicp_dimens.xml
+++ b/packages/SystemUI/res/values/aicp_dimens.xml
@@ -94,4 +94,7 @@
     <dimen name="qs_header_alarm_icon_size">@dimen/status_bar_icon_drawing_size</dimen>
     <dimen name="qs_status_separator">8dp</dimen>
     <dimen name="qs_temperatur_icon_size">16sp</dimen>
+
+    <!-- Data Usage -->
+    <dimen name="data_usage_padding_start">4dp</dimen>
 </resources>
