fwb: Re-introduce keyboard backlight brightness control
Picked remaining support from commit bbd00b7 and lid state
handling from commit 68771fe.

Change-Id: I310dfd026b2dc5e7bc47dd4a2c1ae029d58a1e8e

--- a/core/res/res/values/aicp_config.xml
+++ b/core/res/res/values/aicp_config.xml
@@ -241,4 +241,7 @@
 
     <!-- Wired/BT headset focus mode -->
     <bool name="config_deviceRingtoneFocusMode">false</bool>
+
+    <!-- Keyboard Buttons Brightness control -->
+    <dimen name="config_keyboardBrightnessSettingDefaultFloat">1.0</dimen>
 </resources>
