--- a/core/res/res/layout/transient_notification.xml
+++ b/core/res/res/layout/transient_notification.xml
@@ -18,7 +18,7 @@
 */
 -->
 
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -30,7 +30,8 @@
     android:layout_marginEnd="16dp"
     android:layout_marginStart="16dp"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:paddingEnd="16dp"
+    android:clipChildren="false">
 
     <TextView
         android:id="@android:id/message"
@@ -38,7 +39,22 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="2"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:textAppearance="@style/TextAppearance.Toast"/>
-</LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="15dp"
+        android:layout_marginTop="-16dp"
+        android:layout_marginStart="-16dp"
+        android:layout_toRightOf="@android:id/icon"
+        android:layout_below="@android:id/icon"
+        android:lineHeight="20sp"
+        android:textAppearance="@style/TextAppearance.Toast"
+        android:background="?android:attr/toastFrameBackground"/>
+
+    <ImageView
+        android:id="@android:id/icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
+
+</RelativeLayout>
