Introduce Optimized Charge service
This is a simple but useful feature that protects battery from
overcharge. Many tests have confirmed that charging lithium batteries
to 80% or more hurts their capabilities. Also this feature has
implemented by many oems. Its time to have my own implement for it.

 ** AICP Edits: added SystemSetting validators

Change-Id: I54175e2501a45bb66f95fe9f295fe1b822ede701
Signed-off-by: LibXZR <i@xzr.moe>

--- a/core/res/res/values/aicp_strings.xml
+++ b/core/res/res/values/aicp_strings.xml
@@ -61,4 +61,9 @@
 
     <!-- App lock -->
     <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+
+    <!-- Optimized charge notification -->
+    <string name="optimized_charge_notification_channel_label">Optimized charge</string>
+    <string name="optimized_charge_notification_title">Charging suspended</string>
+    <string name="optimized_charge_notification_text">Charging suspended because of optimized charging policy</string>
 </resources>
