SystemUI: qs columns count settings
and vertical qs tile layout settings (and resource config)

Change-Id: I5b519ad62d17fec16400229264c66cbbde2a2031

--- a/packages/SystemUI/res/values/aicp_config.xml
+++ b/packages/SystemUI/res/values/aicp_config.xml
@@ -37,4 +37,8 @@
     <!-- On-The-Go -->
     <integer name="quick_settings_onthego_dialog_short_timeout">3000</integer>
     <integer name="quick_settings_onthego_dialog_long_timeout">6000</integer>
+
+    <bool name="qs_tile_vertical_layout">false</bool>
+
+    <integer name="quick_qs_panel_max_columns">4</integer>
 </resources>
