[SQUASH] base: introduce app lock [1/4]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Ib1a635b9b26b5a935dfebfdb760b3c0ddd55c0d8

--- a/core/res/res/values/aicp_symbols.xml
+++ b/core/res/res/values/aicp_symbols.xml
@@ -192,4 +192,8 @@
 
     <!-- Whether device supports gaming mode profiles -->
     <java-symbol type="bool" name="config_gamingmode_performance" />
+
+    <!-- App lock -->
+    <java-symbol type="string" name="unlock_application" />
+    <java-symbol type="array" name="config_appLockAllowedSystemApps" />
 </resources>
