--- a/core/res/res/values/aicp_config.xml
+++ b/core/res/res/values/aicp_config.xml
@@ -255,4 +255,8 @@
 
     <!-- Whether device supports gaming mode profiles -->
     <bool name="config_gamingmode_performance">false</bool>
+
+    <!-- List of system apps that are allowed to be locked with app lock.
+         Use with extreme caution. -->
+    <string-array name="config_appLockAllowedSystemApps" translatable="false" />
 </resources>
