--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -74,6 +74,10 @@
         android:title="@string/status_bar_ethernet" />
 
     <com.android.systemui.tuner.StatusBarSwitch
+        android:key="firewall"
+        android:title="@string/status_bar_firewall" />
+
+    <com.android.systemui.tuner.StatusBarSwitch
         android:icon="@drawable/ic_statusbar_headset"
         android:key="headset"
         android:title="@string/headset" />
