base: Show specific 5G NR type
Show 5G NSA and 5G SA instead 5G because it is closely related
to the signal and network speed.

Change-Id: Iad1d4ea3a3e3f863817c84ee83c7582028e2356b
Signed-off-by: LibXZR <i@xzr.moe>

--- a/packages/SettingsLib/res/values/aicp_strings.xml
+++ b/packages/SettingsLib/res/values/aicp_strings.xml
@@ -53,4 +53,8 @@
 
     <!-- Battery use screen. Battery status shown in chart label when charging from a TurboPower source.  -->
     <string name="battery_info_status_turbo_charging">Turbo charging</string>
+
+    <!-- NR Types -->
+    <string name="data_connection_5g_nsa" translatable="false">5G NSA</string>
+    <string name="data_connection_5g_sa" translatable="false">5G SA</string>
 </resources>
