--- a/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
+++ b/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
@@ -84,8 +84,8 @@
                 android:id="@+id/mobile_signal"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical|end"
                 systemui:hasOverlappingRendering="false"
-                android:layout_gravity="end|center_vertical"
             />
             <ImageView
                 android:id="@+id/mobile_roaming"
