SystemUI: Make Lens work without independent package installed
Reference: https://github.com/Nameless-AOSP/packages_apps_Launcher3/commit/46f106b580074a86efea107a48153e4647f209fe
Also do mirror cleanup and make unavailable message translatable.

Change-Id: I907ea5e5e3968d233e3538616fecfba888955233
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>

--- a/packages/SystemUI/res/values/aicp_strings.xml
+++ b/packages/SystemUI/res/values/aicp_strings.xml
@@ -206,6 +206,7 @@
 
     <!-- Google Lens Screenshot string -->
     <string name="lensss">Lens</string>
+    <string name="lens_unavailable">Google Lens is not installed</string>
 
     <!-- On The Go -->
     <string name="onthego_notif_ticker">On-The-Go activated</string>
