QSPanel: Initial Impl to show detailed data usage (1/2)
Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>
Change-Id: Iadefbb213a45e93057e2bd20b27fa1faab1d6075

--- a/packages/SystemUI/res/layout/qs_footer_impl.xml
+++ b/packages/SystemUI/res/layout/qs_footer_impl.xml
@@ -73,6 +73,14 @@
                     android:tint="?android:attr/textColorPrimary" />
             </FrameLayout>
 
-        </LinearLayout>
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="50dp" />
+
+        <include layout="@layout/data_usage_panel"
+            android:id="@+id/qs_data_usage"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </com.android.systemui.qs.QSFooterView>
