--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -125,11 +125,10 @@
         android:title="@string/status_bar_work" />
 
     <!-- secure -->
-
-    <com.android.systemui.tuner.BatteryPreference
+    <!--com.android.systemui.tuner.BatteryPreference
         android:icon="@*android:drawable/ic_battery"
         android:title="@string/battery"
         android:summary="%s"
-        android:entries="@array/battery_options" />
+        android:entries="@array/battery_options" /-->
 
 </PreferenceScreen>
