DataSwitchTile: Show active SIM in secondary Label
Change-Id: I6bcac2064a1ec74fdd8df8b3263ccfb7e7948d0b

--- a/packages/SystemUI/res/values/aicp_strings.xml
+++ b/packages/SystemUI/res/values/aicp_strings.xml
@@ -173,6 +173,8 @@
     <string name="qs_data_switch_toast_1">Currently only one SIM card is inserted</string>
     <string name="qs_data_switch_changed_1">Switch data card to SIM 1.</string>
     <string name="qs_data_switch_changed_2">Switch data card to SIM 2.</string>
+    <string name="qs_data_sim_1">SIM 1</string>
+    <string name="qs_data_sim_2">SIM 2</string>
 
     <!-- Omnijaws Weather -->
     <string name="omnijaws_service_error">Error</string>
