--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -261,7 +261,7 @@
     <bool name="def_one_handed_mode_activated">false</bool>
 
     <!-- Default for Settings.Secure.LOCK_SCREEN_SHOW_QR_CODE_SCANNER -->
-    <bool name="def_lock_screen_show_qr_code_scanner">true</bool>
+    <bool name="def_lock_screen_show_qr_code_scanner">false</bool>
 
     <!-- ========================================== -->
     <!-- Default values for wear specific settings. -->
